[gd_scene load_steps=2 format=3 uid="uid://cp5u2kn35qsdc"]

[ext_resource type="Script" uid="uid://8ibuxixnksev" path="res://scripts/Chat.gd" id="1_uca72"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 350.0
grow_vertical = 2
script = ExtResource("1_uca72")

[node name="LeaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Leave Lobby"

[node name="ChatBox" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MessageInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"
